fix the owner icon overlapping in lineage full view (#21020)
* fix the owner icon overlapping in lineage full view

* fix the sonar/unit test issue

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/OwnerAvtar/owner-avtar.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/OwnerAvtar/owner-avtar.less
@@ -22,7 +22,7 @@
   flex-direction: row;
 
   .owner-avatar-container {
-    margin-right: -4px;
+    margin-left: -4px;
     transition: transform 0.2s;
 
     &:not(.is-compact-view) {
@@ -30,15 +30,6 @@
         transform: translateY(-2px);
         z-index: 20 !important;
       }
-    }
-
-    &:first-child {
-      z-index: 1;
-    }
-
-    &:last-child {
-      margin-right: 0;
-      z-index: 4;
     }
   }
 }
@@ -54,7 +45,6 @@
     border-radius: 50%;
     width: 12px;
     height: 12px;
-    z-index: 5;
     border: 1px solid @primary-heading-color;
     display: flex;
     align-items: center;
